fixed contact page, looks decent on mobile minus interests page

--- a/src/assets/scss/ContactPage.scss
+++ b/src/assets/scss/ContactPage.scss
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family-Poppins:400,500,700");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
+
 .btn-email {
     background: #dfe3e8;
     color: #0b1d24;
@@ -5,7 +9,7 @@
     border-radius: 40px;
     padding: 5px 25px;
     font-family: Poppins, sans-serif;
-    font-size: 22px;
+    font-size: calc(18px + (20 - 18) * ((100vw - 600px) / (1600 - 600)));
     &:hover {
         opacity: 0.7;
         transition: all 0.3s ease;
@@ -13,9 +17,10 @@
 }
 
 .contact-text {
-    font-size: 22px;
+    font-size: 20px;
     margin-bottom: 5vh;
     margin-top: 5vh;
+    font-family: Josefin Sans, sans-serif;
 }
 
 .contact-container {
@@ -27,11 +32,10 @@
 .title-wrapper {
     text-align: center;
     .title {
-        font-size: calc(36px + (86 - 36) * ((100vw - 600px) / (1600 - 600)));
+        font-size: calc(46px + (66 - 46) * ((100vw - 600px) / (1600 - 600)));
         margin-bottom: -25px;
     }
     .title-line {
-        width: calc(65px + (132 - 65) * ((100vw - 600px) / (1600 - 600)));
-        margin-bottom: 20px;
+        width: calc(67px + (127 - 67) * ((100vw - 600px) / (1600 - 600)));
     }
 }
