--- a/src/assets/scss/InterestsBar.scss
+++ b/src/assets/scss/InterestsBar.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 .interest-item {
-    margin: 45px auto;
-    height: 25vh;
+    margin: 4vh auto;
+    height: 20vh;
     width: 70vw;
     background: rgba(0, 0, 0, 0);
     border: 0px;
